<resources>
    <string name="app_name">Proyecto Firebase</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Firebase Authentication</string>

    <string name="hint_user_id">User ID</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="exit">Exit</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="btnBuscarFotoTxt">Buscar</string>
    <string name="btnPedirFotoTxt">Pedir Foto</string>
    <string name="btnVerUsuarioTxt">Ver</string>
    <string name="btnVerRepartosTxt">Ver Repartos</string>
    <string name="btnAnhadirQuejaTxt">Añadir Queja</string>
    <string name="btnAnhadirIncidenciaTxt">Añadir Incidencia</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="anonymous_sign_in">Anonymous Sign In</string>
    <string name="account_linking">Account Linking</string>
    <string name="status_logged">Logged</string>
    <string name="field_required">Field required.</string>

    <string name="strErrorUser">No se ha recuperado ningún usuario</string>
    <string name="strErrorPhoto">No se ha recuperado ninguna photo</string>

    <string name="albumFotoTxt">Álbum: </string>
    <string name="titleFotoTxt">Título: </string>

    <string name="userNameTxt">User: </string>
    <string name="userEmailTxt">Email: </string>
</resources>


