<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/desc_firebase_lockup"
        android:src="@drawable/firebase_lockup_400" />

    <TextView
        android:id="@+id/titleAnonymous"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/icon"
        android:layout_marginBottom="8dp"
        android:text="@string/label_emailpassword"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/fieldEmail"
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleAnonymous"
        android:layout_alignStart="@+id/titleAnonymous"
        android:layout_marginStart="1dp"
        android:layout_marginTop="9dp"
        android:hint="@string/hint_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/fieldPassword"
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fieldEmail"
        android:layout_alignStart="@+id/titleAnonymous"
        android:hint="@string/hint_password"
        android:importantForAutofill="no"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fieldPassword"
        android:layout_alignStart="@+id/titleAnonymous"
        android:layout_marginStart="5dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/fui_bgPhone"
        android:text="@string/sign_in" />

    <Button
        android:id="@+id/buttonExit"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/buttonSignIn"
        android:layout_margin="5dp"
        android:layout_toEndOf="@+id/buttonSignIn"
        android:background="@color/fui_bgEmail"
        android:enabled="false"
        android:text="@string/exit" />

</RelativeLayout>