<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DeliveryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_weight="0.30"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/userNameTxt"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="86dp"
                android:layout_height="wrap_content"
                android:text="@string/userNameTxt" />

            <TextView
                android:id="@+id/userName"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="368dp"
                android:layout_height="wrap_content"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/userEmailTxt"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="86dp"
                android:layout_height="wrap_content"
                android:text="@string/userEmailTxt" />

            <TextView
                android:id="@+id/userEmail"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="368dp"
                android:layout_height="wrap_content"
                android:text="" />
        </LinearLayout>

        <Button
            android:id="@+id/btnVerUsuario"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@color/fui_bgPhone"
            android:drawableStart="@android:drawable/ic_menu_view"
            android:text="@string/btnVerUsuarioTxt" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_weight="0.5"
        android:orientation="horizontal"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/photoImage"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="top"
                android:layout_marginBottom="70dp"
                android:contentDescription="Imagen de la foto que está en venta" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="240dp"
            android:layout_weight="0.8"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="0"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/albumFotoTxt"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="67dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/albumFotoTxt" />

                <TextView
                    android:id="@+id/albumFoto"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="0"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/titleFotoTxt"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="68dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/titleFotoTxt" />

                <TextView
                    android:id="@+id/titleFoto"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp"
                    android:text="" />
            </LinearLayout>

            <Button
                android:id="@+id/btnBuscarFoto"
                android:layout_width="143dp"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:layout_marginTop="20dp"
                android:background="@color/fui_bgPhone"
                android:drawableLeft="@android:drawable/ic_search_category_default"
                android:text="@string/btnBuscarFotoTxt" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/accion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/btnPedirFoto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="0.5"
            android:background="@color/fui_bgPhone"
            android:src="@android:drawable/ic_menu_search"
            android:text="@string/btnPedirFotoTxt" />

        <Button
            android:id="@+id/btnRepartos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="0.5"
            android:background="@color/fui_bgPhone"
            android:src="@android:drawable/ic_menu_search"
            android:text="@string/btnVerRepartosTxt" />

    </LinearLayout>

</LinearLayout>
